--- a/src/sass/_jumbotron.scss
+++ b/src/sass/_jumbotron.scss
@@ -1,9 +1,8 @@
 .jumbotron{
     max-width: 1440px;
     width: 100%;
-    background-image: url(/assets/Rectangle.jpg);
+    background-image: url(/ToothPasteshop/assets/Rectangle.jpg);
     margin: 0 auto;
-    // padding: 169px 181px 235px 181px;
     padding: 169px 0 181px 0px;
     background-size: cover;
     background-repeat: no-repeat;
