--- a/src/sass/_subscription-section.scss
+++ b/src/sass/_subscription-section.scss
@@ -6,7 +6,7 @@
 .subscription-section__top-part{
     width: 100%;
     height: 700px;
-    background-image: url(/assets/pic1.png);
+    background-image: url(/ToothPasteshop/assets/pic1.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -14,7 +14,7 @@
 .subscription-section__middle-part{
     width: 100%;
     height: 600px;
-    background-image: url(/assets/pic2.png);
+    background-image: url(/ToothPasteshop/assets/pic2.png);
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
@@ -23,7 +23,7 @@
 .subscription-section__bottom-part{
     width: 100%;
     height: 200px;
-    background-image: url(/assets/Wave1.png);
+    background-image: url(/ToothPasteshop/assets/Wave1.png);
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
