--- a/src/sass/_video.scss
+++ b/src/sass/_video.scss
@@ -7,10 +7,9 @@
     max-width: 600px;
     width: 100%;
     padding: 0 5px 64px;
-    background-image: url(/assets/video.png);
+    background-image: url(/ToothPasteshop/assets/video.png);
     background-size: cover;
     background-repeat: no-repeat;
-    // background-position: center;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
